updated index ejs and user model plans

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
 
     <% } else { %>
         <!-- Show this content for logged-out users -->
-        <p>Please <a href="/auth/google">login with Google</a> to fully access the website.</p>
+        <p>Please <button><a href="/auth/google">login with Google</a></button> to fully access the website.</p>
     <% } %>
 </body>
 </html>
